# mpschip8

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh
lib/: CMakeLists.txt  cpu.cpp  screen.cpp
lib/include/: cpu.h  screen.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_chip8.cpp
